# mowjsub

./: .gitignore  .readthedocs.yaml  CLAUDE.md  README.rst  pyproject.toml  ruff.toml
.github/workflows/: python-poetry-package.yml  python-publish.yml  tests-builds.yaml
contsub/: __init__.py  exceptions.py  fitfuncs.py  image_plane.py  utils.py  visibility_plane.py
contsub/parser/: dimcontsub.py  imcontsub.py  imcontsub.yaml  viscontsub.py  viscontsub.yaml
docs/source/: conf.py  index.rst
docs/source/how-to/: installation.rst  usage.rst
docs/source/reference/: reference.rst
mowjsub/: __init__.py  exceptions.py  fitfuncs.py  image_plane.py  masking.py  utils.py  visibility_plane.py
mowjsub/parser/: im_mowjsub.py  im_mowjsub.yaml  mowjsub_cabs.yaml  vis_mowjsub.py  vis_mowjsub.yaml
mowjsub/stimelating/: im_mowjsub_param.yaml  im_mowjsub_recipe.yaml  mowjsub_cabs.yaml  vis_mowjsub_param.yaml
tests/: test_main.py
