[tool.poetry]
name = "contsub"
version = "2.0.0rb"
description = "Radio astronomy data continuum subtraction tools"
authors = ["Sphesihle Makhathini, Mika Naidoo", "Amir Kazemi-Moridani"]
license = "MIT"
readme = "README.rst"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = "^*"
astropy = "*"
scipy = "*"
xarray-fits = "*"
xarray = "*"
stimela = "^2.1.2"
zarr = "*"
tdqm = "*"
dask-ms = "*"
dask = "*"


[tool.poetry.scripts]
imcontsub = "contsub.parser.imcontsub:runit"
viscontsub = "contsub.parser.viscontsub:runit"

[tool.poetry.group.dev.dependencies]
jupyter = "*"
matplotlib = "*"

[tool.poetry.group.tests]
optional = true
[tool.poetry.group.tests.dependencies]
pytest = "8.4.1"
flake8 = "*"


[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
Sphinx = "^8.1"
sphinx-copybutton = "*"
furo = "*"
sphinx-rtd-theme = "*"
sphinx_click = "6.0.0"
