[project]
name = "mowjsub"
version = "2.0rc1"
description = "Radio astronomy data continuum subtraction tools"
authors = [
	{ name = "Sphesihle Makhathini" },
	{ name = "Mika Naidoo" },
	{ name = "Amir Kazemi-Moridani" },
]
requires-python = ">=3.10,<3.14"
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
	"numpy",
	"astropy",
	"scipy",
	"xarray-fits",
	"xarray",
	"stimela>=2.1.2,<3",
	"zarr",
	"tqdm",
	"dask-ms",
	"dask",
]

[project.scripts]
im-mowjsub = "mowjsub.parser.im_mowjsub:runit"
vis-mowjsub = "mowjsub.parser.vis_mowjsub:runit"

[dependency-groups]
dev = [
	"jupyter",
	"matplotlib",
]

ruff = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.9",
]

tests = [
	"pytest==8.4.1",
    {include-group = "ruff"}
    ]

docs = [
	"Sphinx>=8.1,<9",
	"sphinx-copybutton",
	"furo",
	"sphinx-rtd-theme",
	"sphinx_click==6.0.0",
]

[tool.hatch.build.targets.sdist]
include = ["mowjsub"]

[tool.hatch.build.targets.wheel]
include = ["mowjsub"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
